--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.3",
     "mongodb": "^6.4.0",
-    "mongoose": "^8.2.0"
+    "mongoose": "^8.2.0",
+    "socket.io": "^4.7.4"
   },
   "devDependencies": {
     "nodemon": "^3.1.0"
