--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "./src/index.js",
   "scripts": {
     "dev": "nodemon",
+    "build": "npm install",
     "start": "node src/index.js"
   },
   "author": "",
