--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "dev": "nodemon",
     "build": "npm install",
-    "start": "node src/index.js"
+    "start": "node index.js"
   },
   "author": "",
   "license": "ISC",
